- Fixed table overflow

--- a/ui/client/src/scss/index.scss
+++ b/ui/client/src/scss/index.scss
@@ -34,6 +34,13 @@ table {
     td {
         border-bottom: 1px solid #ddd;
         text-align: center;
+        span {
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            max-width: 100px;
+            display: block;
+            overflow: hidden;
+        }
     }
 
     tr:nth-child(even) {
